[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/project-art/png/Menus/mainmenu_backgound-NOTFREE.png" type="Texture" id=1]
[ext_resource path="res://art/project-art/png/Logo.png" type="Texture" id=2]
[ext_resource path="res://scene/menu/Options.gd" type="Script" id=3]
[ext_resource path="res://scene/village/VillageHope.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/control/root.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/control/StartGameButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/control/CreditsButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/control/ExitButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://art/project-art/fonts/codeman38_press-start-2p/PressStart2P.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]

size = 12
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="MainMenu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="Logo" type="TextureRect" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 660.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 6

[node name="Options" type="VBoxContainer" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 31.0
margin_right = 660.0
margin_bottom = 524.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 1
script = ExtResource( 3 )
CREDIT_SCENE = ExtResource( 4 )
StartScene = ExtResource( 5 )

[node name="NewGame" parent="VBoxContainer/Options" index="0" instance=ExtResource( 6 )]

margin_top = 182.0
margin_right = 660.0
margin_bottom = 222.0
_sections_unfolded = [ "Hint", "Rect" ]

[node name="Credits" parent="VBoxContainer/Options" index="1" instance=ExtResource( 7 )]

margin_top = 226.0
margin_right = 660.0
margin_bottom = 266.0
_sections_unfolded = [ "Hint", "Rect" ]

[node name="Exit" parent="VBoxContainer/Options" index="2" instance=ExtResource( 8 )]

margin_top = 270.0
margin_right = 660.0
margin_bottom = 310.0
_sections_unfolded = [ "Hint", "Rect" ]

[node name="Info" type="Label" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 528.0
margin_right = 660.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.078125, 0.0576806, 0.00335693, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "V0.01"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants" ]

[connection signal="pressed" from="VBoxContainer/Options/NewGame" to="VBoxContainer/Options" method="_on_NewGame_pressed"]

[connection signal="pressed" from="VBoxContainer/Options/Credits" to="VBoxContainer/Options" method="_on_Credits_pressed"]

[connection signal="pressed" from="VBoxContainer/Options/Exit" to="VBoxContainer/Options" method="_on_Exit_pressed"]


